<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fragment_default_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/num_of_words_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_widget_margin"
        android:text="@string/number_of_words" />

    <LinearLayout
        android:id="@+id/words_container_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/num_of_words_tv"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/twelve_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/number_option_padding"
            android:text="@string/twelve" />

        <TextView
            android:id="@+id/fifteen_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/number_option_padding"
            android:text="@string/fifteen" />

        <TextView
            android:id="@+id/eighteen_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/number_option_padding"
            android:text="@string/eighteen" />

        <TextView
            android:id="@+id/twentyone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/number_option_padding"
            android:text="@string/twentyone" />

        <TextView
            android:id="@+id/twentyfour_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/number_option_padding"
            android:text="@string/twentyfour" />

    </LinearLayout>

    <TextView
        android:id="@+id/passphrase_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passphrase_sw"
        android:layout_alignBottom="@+id/passphrase_sw"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/fragment_widget_margin"
        android:text="@string/passphrase" />

    <Switch
        android:id="@+id/passphrase_sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/words_container_ll"
        android:layout_toEndOf="@+id/passphrase_tv"
        android:layout_toRightOf="@+id/passphrase_tv" />

    <EditText
        android:id="@+id/num_of_words_et"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/num_of_pub_add_tv"
        android:ems="10"
        android:hint="@string/num_of_words_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/num_of_pub_add_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/fragment_widget_margin"
        android:text="@string/number_of_public_addresses" />

    <Button
        android:id="@+id/generate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/generate" />

    <EditText
        android:id="@+id/passphrase1_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passphrase_sw"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/passphrase2_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passphrase1_et"
        android:ems="10"
        android:inputType="textPassword" />


</RelativeLayout>